# electricity-feed-analysis

./: .gitignore  pyproject.toml
docs/: DWD Data.md  MaStR Data.md
notebooks/: aswdir_s_eda.ipynb  dwd_timeseries.ipynb  mastr_eda.ipynb  t2m_eda.ipynb  u_eda.ipynb  v_eda.ipynb
src/efa/: __init__.py  config.py  core.py
src/efa/process_dwd_data/: __init__.py  collect_timeseries.py  file_discovery.py  grib_reader.py  processor.py  utils.py
src/efa/tables/: __init__.py  core.py
src/efa/tables/L0/: DwdWeather.py  __init__.py  dwd_weather.py
thesis_docs/: DWD Data.md  Project Plan.md  Thesis Description.md
