[project]
name = "efa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Het Parekh", email = "hetparekh16@gmail.com" }
]
requires-python = "==3.12"
dependencies = [
    "xarray>=2025.10.1",
]

[project.scripts]
efa = "efa:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
